[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flask-openai"
version = "0.5.0"
description = "A Flask extension for easy integration with OpenAI's API."
authors = [
    {name = "Nidal Alhariri", email = "level09@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = [
    "flask >=3.0.0",
    "openai >=0.27.0",
]

[project.urls]
Home = "https://github.com/level09/flask-openai"


[tool.flit.module]
name = "flask_openai"
